# file-explorer

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  GEMINI.md  README.md  ROADMAP.md  TODOS.md  bun.lockb  package.json
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/platform-windows/: Cargo.toml
docs/: README.md  architecture-blueprint.md  development-workflow.md  product-vision.md  release.md
docs/decisions/: 0001-rust-owned-filesystem-boundary.md  README.md
docs/handbook/: README.md  code-organization.md  file-size-and-split.md  hygiene.md  pr-checklist.md
src/: App.vue  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: explorer.rs
src-tauri/src/explorer/: jobs.rs  service.rs
src-tauri/src/ipc/: directory.rs
src-tauri/src/platform/windows/: fs.rs  icons.rs  mod.rs
src/components/: Greet.vue  Header.vue  PathBar.vue
src/components/directories/: DirectoryItem.vue  DirectoryList.vue
src/components/volumes/: Volume.vue  VolumeList.vue  volumes.d.ts
src/lib/stores/: dialogs.ts  explorerActions.ts  explorerSession.ts  explorerSessionCore.ts  explorerSessionHelpers.ts  explorerSessionIcons.ts  explorerSessionMutations.ts  explorerSessionSelection.ts  explorerUi.ts  (+6 more)
src/routes/: +layout.svelte  +page.svelte
src/stores/: store.ts
tests/: bun-test.d.ts  explorer-selection.test.ts  explorer-tauri.test.ts  explorer-types.test.ts  explorer-ui.test.ts  run-rust-command.ts
(+31 files in other folders)
