[package]
name = "file-explorer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37.0"
chrono = "0.4.38"

